--- a/templates/userpool.yaml
+++ b/templates/userpool.yaml
@@ -1,6 +1,13 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Cognito User Pool with OAuth2 Client Credentials for ShopFast
 
+Parameters:
+  DomainName:
+    Type: String
+    Default: auth.denilparmar.work
+    Description: my custom domain for Cognito
+  
+
 Resources:
 
   # ------------------------------------------------------------
@@ -59,6 +66,12 @@ Resources:
       Domain: denil-shopfast
       UserPoolId: !Ref ShopFastUserPool
 
+  ShopFastCognitoCert:
+    Type: AWS::CertificateManager::Certificate
+    Properties:
+      DomainName: !Ref DomainName
+      ValidationMethod: DNS
+
 Outputs:
 
   UserPoolId:
@@ -87,6 +100,6 @@ Outputs:
 
   CognitoDomain:
     Description: Cognito Hosted Domain
-    Value: !Sub "https://${ShopFastUserPoolDomain}.auth.${AWS::Region}.amazoncognito.com"
+    Value: !Sub "https://${DomainName}"
     Export:
       Name: ShopFast-AuthDomain
