--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,19 +28,11 @@ jobs:
 
       - name: Deploy CloudFormation stack
         run: |
-          # Read values from params/dev.yaml
-          AUTH_DOMAIN_NAME=$(yq eval '.AuthDomainName' params/dev.yaml)
-          STACK_NAME=$(yq eval '.StackName' params/dev.yaml)
-          CERT_ARN=$(yq eval '.ShopFastCognitoCert' params/dev.yaml)
-
-          echo "Deploying stack $STACK_NAME with domain $AUTH_DOMAIN_NAME"
-
           aws cloudformation deploy \
             --stack-name $STACK_NAME \
             --template-file templates/userpool.yaml \
             --capabilities CAPABILITY_NAMED_IAM \
-            --parameter-overrides \
-              DomainName=$AUTH_DOMAIN_NAME \
-              CognitoCertArn=$CERT_ARN
+            --parameter-overrides file://params/dev.json
+
 
 
