--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy CloudFormation stack
         run: |
           aws cloudformation deploy \
-            --stack-name $STACK_NAME \
+            --stack-name auth-dev-stack \
             --template-file templates/userpool.yaml \
             --capabilities CAPABILITY_NAMED_IAM \
             --parameter-overrides \
