--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
             --capabilities CAPABILITY_NAMED_IAM \
             --parameter-overrides \
                 StackName=shopfast-auth-dev \
-                AuthDomainName=auth-dev.denilparmar.work \
-                ShopFastCognitoCert=arn:aws:acm:us-east-1:388742983609:certificate/05cf3755-c9f8-482f-950b-f683cd2cdf64
+                AuthDomainName=auth2-dev.denilparmar.work \
+                ShopFastCognitoCert=arn:aws:acm:us-east-1:388742983609:certificate/e74d25c6-f80b-48d6-a819-7f2aae1709b3
 
 
 
